syntax = "proto3";

option csharp_namespace = "Imagine.Inbound.GrpcAdapter.Protos";

service UploadService {
  rpc UploadImageStream (stream UploadImageChunk) returns (UploadImageResponse);
}

message UploadImageChunk {
  string image_name = 1;
  bytes image_data = 2;
  int32 chunk_index = 3;
  float exposure = 4;
  float brightness = 5;
  float contrast = 6;
  float saturation = 7;
  float hue = 8;
  float gamma = 9;
  float blur = 10;
  float sharpen = 11;
}

message UploadImageResponse {
  string status = 1;
  string message = 2;
  bytes processed_image = 3;
}